Changed from radio button to checkbox

--- a/style.css
+++ b/style.css
@@ -125,10 +125,7 @@ dfn {
 }
 
 h1 {
-  letter-spacing: 30px;
-  font-size: 40pt;
-  text-align: center;
-  text-transform: uppercase;
+	text-transform: uppercase;
 }
 
 h3 {
@@ -289,7 +286,6 @@ input,
 select,
 optgroup,
 textarea {
-	color: #404040;
 	font-family: 'LinLibertine', serif, sans-serif;
 	font-size: 16px;
 	font-size: 1rem;
@@ -371,6 +367,19 @@ bigger {
   font-size: 150%;
 }
 
+.site-title {
+  letter-spacing: 30px;
+  font-size: 40pt;
+  text-align: center;
+}
+
+.entry-title {
+  text-transform: uppercase;
+  font-family: 'LinLibertine';
+  font-size: 30pt;
+  font-weight: normal;
+  margin: 0px;
+}
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
