Fixed header menu

--- a/style.css
+++ b/style.css
@@ -284,6 +284,11 @@ th {
 	padding: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
@@ -490,6 +495,13 @@ figure {
 table {
 	margin: 0 0 1.5em;
 	width: 100%;
+}
+
+/* Removes extra space added to main menu */
+ul#primary-menu.menu,
+ol#primary-menu.menu {
+	margin-left: 0px;
+  margin-right: 0px;
 }
 
 /*--------------------------------------------------------------
@@ -873,6 +885,7 @@ object {
 
 .wp-caption-text {
 	text-align: center;
+  color: #888888;
 }
 
 /*--------------------------------------------------------------
